website link fixed

--- a/themes/default/common/topmenu.html
+++ b/themes/default/common/topmenu.html
@@ -1,6 +1,6 @@
 <div class="row topmenu" style="display: flex; justify-content: space-between; align-items: center; height: auto;">
 
-    <div class="title"><a class="heading-link" href="http://davidsilvacollege/" target="_blank">David De Silva College <br/> Minuwangoda </a></div>
+    <div class="title"><a class="heading-link" href="https://davidsilvacollege.lakmal.xyz/" target="_blank">David De Silva College <br/> Minuwangoda </a></div>
 
     <div class="time">{{ date_now }} <br/> <div class="digital-clock">{{ time_now }}</div> </div>
 
