--- a/themes/default/login/index.html
+++ b/themes/default/login/index.html
@@ -5,7 +5,7 @@
     <div class="container-fluid login">
 
         <div class="section p-4">
-            <a href="http://davidsilvacollege" class="website"><h6>Back to Official Website</h6></a>
+            <a href="https://davidsilvacollege.lakmal.xyz/" class="website"><h6>Back to Official Website</h6></a>
         </div>
 
         <div class="container my-auto">
