--- a/themes/default/staff/search.html
+++ b/themes/default/staff/search.html
@@ -193,13 +193,13 @@
                     <!-- START : SEARCH RESULTS -->
                     <section class="mt-5">
                         <!-- START : SEARCH RESULT TABLE -->
-                        {% if staffs %}
+                        {% if staff.details %}
                             <table id="table_staff_search" class="table table-hover table-responsive-md">
                                 <caption> Search Results of Staff </caption>
                                 <thead class="thead-dark">
                                     <tr>
-                                        <th width="1%" class="text-center" scope="col">ID</th>
-                                        <th width="10%" scope="col">Admission</th>
+                                        <th width="1%" scope="col">ID</th>
+                                        <th width="10%" scope="col">Employee ID</th>
                                         <th width="15%" scope="col">Type</th>
                                         <th width="5%" scope="col">Gender</th>
                                         <th scope="col">Name</th>                                    
@@ -208,10 +208,9 @@
                                 </thead>
 
                                 <tbody>
-                                    {% for staff in staffs %}
+                                    {% for staff in staff.details %}
                                         <tr>
-                                            <th class="text-center" scope="row">{{ staff.id }}</th>
-                                            <td>{{ staff.employee_no }}</td>
+                                            <th scope="row">{{ staff.id }}</th>
                                             <td>{{ staff.type }}</td>
                                             <td>{{ staff.gender }}</td>
                                             <td> {{ staff.name }}</td>                                        
